# SPARKPLUG-1

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.old
Components/Init/: CMakeLists.txt  Init.c  Init.h
Components/Sparkplug/: CMakeLists.txt  Sparkplug.c  Sparkplug.h
Components/Wifi_mqtt/: CMakeLists.txt  Topics.h  Wifi_mqtt.c  Wifi_mqtt.h
Components/ds3231/: CMakeLists.txt
Components/file_server/: CMakeLists.txt  file_server.c  upload_script.html
Components/gpio_funcs/: CMakeLists.txt  gpio_funcs.c  gpio_funcs.h
Components/modbusRTU/: CMakeLists.txt  master.c  master.h
Components/modbusTCP/: CMakeLists.txt  ethernet_example_main.c  ethernet_example_main.h
Components/mosquitto/: CMakeLists.txt  loop.c  mosquitto.c  net_mosq.c  time_mosq.c
Components/mosquitto/include/: mosquitto.h  mosquitto_internal.h
Components/tahu/: CMakeLists.txt  tahu.c
Components/tahu/include/: tahu.h  tahu.pb.h
main/: CMakeLists.txt  main.c  main.h
